<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="50dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="false"
        android:layout_centerHorizontal="true"
        android:src="@drawable/qr_code_orange"
        app:tint="@color/slate_blue"
        android:contentDescription="@string/QrImage" />

    <Button
        android:id="@+id/scanBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_centerInParent="true"
        android:layout_marginTop="60dp"
        android:width="300dp"
        android:height="30dp"
        android:background="@color/slate_blue"
        android:backgroundTint="@color/slate_blue"
        android:onClick="onBtnsClicked"
        android:text="@string/scan_btn"
        android:textColor="@color/white"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/generateBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/scanBtn"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:width="300dp"
        android:height="30dp"
        android:background="@color/slate_blue"
        android:onClick="onBtnsClicked"
        android:text="@string/generate_btn"
        android:textColor="@color/white"
        tools:ignore="TextContrastCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="15dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/github_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/github"
            android:contentDescription="@string/github_desc" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/sulphur_point_bold"
            android:text="@string/getSource" />

    </LinearLayout>

</RelativeLayout>