<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="50dp"
    android:background="@color/white"
    android:foregroundTintMode="add"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:id="@+id/activity_generator">

    <ImageView
        android:id="@+id/qrCodePlaceholder"
        android:layout_width="@dimen/content_width"
        android:layout_height="@dimen/content_width"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="false"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/QrImage"
        android:minWidth="@dimen/content_width"
        android:minHeight="@dimen/content_width"
        android:src="@drawable/qr_code_will_be_here"
        android:tintMode="add"
        app:tint="@color/slate_blue" />

    <EditText
        android:id="@+id/contentTxtBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/qrCodePlaceholder"
        android:layout_centerInParent="true"
        android:layout_marginTop="60dp"
        android:width="@dimen/content_width"
        android:background="@color/slate_blue"
        android:backgroundTint="@color/slate_blue"
        android:fontFamily="@font/sulphur_point"
        android:hint="@string/write_something"
        android:inputType="textMultiLine"
        android:maxHeight="150dp"
        android:padding="13dp"
        android:scrollbars="vertical"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="14sp"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/generateCodeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/contentTxtBox"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:width="@dimen/content_width"
        android:height="30dp"
        android:background="@color/slate_blue"
        android:fontFamily="@font/sulphur_point"
        android:text="@string/generate_btn"
        android:textColor="@color/white"
        tools:ignore="TextContrastCheck" />

    <LinearLayout
        android:id="@+id/getSourceBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="15dp"
        android:onClick="onBtnClicked"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/github_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/github_desc"
            app:srcCompat="@drawable/github" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/sulphur_point"
            android:text="@string/getSource" />

    </LinearLayout>

</RelativeLayout>